trunk/Archive2/73/acdf12e3a52815/output
main.cpp:16:5: error: no matching function for call to 'func'
    func({1, 2});   // This doesn't because there's no rule for function
    ^~~~
main.cpp:6:6: note: candidate template ignored: couldn't infer template argument 'T'
void func(T arg) {
     ^
1 error generated.
